--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,17 @@ authors = [
     {name = "hhhscvx",email = "hhhscvx@yandex.ru"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.9,<3.13"
 dependencies = [
     "ffmpeg-python (>=0.2.0,<0.3.0)",
     "faster-whisper (>=1.2.0,<2.0.0)",
-    "torch (==2.1.2)",
-    "numpy (>=1.22,<1.24)",
-    "torchaudio (==2.1.2)",
     "scikit-learn (==1.4.2)",
     "librosa (==0.10.2.post1)",
-    "soundfile (==0.12.1)"
+    "soundfile (==0.12.1)",
+    "torch (==2.5.1)",
+    "torchaudio (==2.5.1)",
+    "numpy (>=2.0.2,<2.1)",
+    "whisperx (>=3.4.3,<4.0.0)"
 ]
 
 
@@ -29,5 +30,3 @@ dev = [
 ]
 
 [tool.poetry.dependencies]
-torch = {source = "pypi"}
-torchaudio = {source = "pypi"}
