Добавлен конфиг под пути к файлам

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,12 @@
 NEMO_HF_TOKEN=
+
+# по умолчанию все берется из корня проекта. не указывать слеш в конце
+INTERVIEWS_PATH=
+SCRAPED_FFMPEG_PATH=
+SCRAPED_WHISPER_PATH=
+SCRAPED_RESULT_PATH=
+
+# разделение аудио на части для whisperx
+AUDIO_PARTS_PATH="audio_parts"
+AUDIO_PARTS_MINUTES=15
+AUDIO_OVERLAP_SEC=2
