--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "hhhscvx",email = "hhhscvx@yandex.ru"}
 ]
 readme = "README.md"
-requires-python = ">=3.9,<3.13"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "ffmpeg-python (>=0.2.0,<0.3.0)",
     "faster-whisper (>=1.2.0,<2.0.0)",
@@ -16,7 +16,9 @@ dependencies = [
     "torch (==2.5.1)",
     "torchaudio (==2.5.1)",
     "numpy (>=2.0.2,<2.1)",
-    "whisperx (>=3.4.3,<4.0.0)"
+    "whisperx (>=3.4.3,<4.0.0)",
+    "pydantic-settings (>=2.11.0,<3.0.0)",
+    "loguru (>=0.7.3,<0.8.0)",
 ]
 
 
